# rshash

./: .gitignore  AUTHORS.adoc  BUILD.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  INSTALL.adoc  README-crates.io.md  README.adoc  README.md  build.rs  justfile  meson.build  meson_options.txt
.github/workflows/: CD.yaml  CI.yaml
doc/: meson.build
doc/crates.io/: README.md
doc/man/include/: section-copyright.adoc  section-exit-status.adoc  section-notes.adoc  section-reporting-bugs.adoc
doc/man/man1/: meson.build  rshash.1.adoc
doc/man/man5/: meson.build  rshash-config.toml.5.adoc
share/patch/: README.adoc.patch
src/: cli.rs  compute.rs  config.rs  digest.rs  macros.rs  main.rs  output.rs  value.rs  verify.rs
tests/: integration.rs
tests/resource/checksum/: bsd.b2b  bsd.md5  json.b2b  json.md5  sfv.b2b  sfv.md5
