[package]
name = "rshash"
version = "0.2.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.56.0"
description = "A utility for computing various message digests"
readme = "README-crates.io.md"
repository = "https://github.com/sorairolake/rshash"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
blake2 = "0.9.2"
blake3 = "1.1.0"
dialoguer = { version = "0.9.0", default-features = false }
directories = "4.0.1"
exitcode = "1.1.2"
gost94 = "0.9.1"
groestl = "0.9.0"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
maplit = "1.0.2"
md-5 = "0.9.1"
md2 = "0.9.0"
md4 = "0.9.0"
once_cell = "1.8.0"
rayon = "1.5.1"
regex = "1.5.4"
ripemd160 = "0.9.1"
ripemd256 = "0.1.0"
ripemd320 = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = { version = "1.11.0", features = ["hex"] }
sha-1 = "0.9.8"
sha2 = "0.9.8"
sha3 = "0.9.1"
shabal = "0.3.0"
sm3 = "0.3.0"
streebog = "0.9.2"
structopt = "0.3.25"
strum = { version = "0.22.0", features = ["derive"] }
tiger = "0.1.0"
toml = "0.5.8"
whirlpool = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
tempfile = "3.2.0"

[features]
# For assembly implementation.
md5-asm = ["md-5/asm"]
sha1-asm = ["sha-1/asm"]
sha2-asm = ["sha2/asm"]
whirlpool-asm = ["whirlpool/asm"]
asm = ["md5-asm", "sha1-asm", "sha2-asm", "whirlpool-asm"]

# For BLAKE3 optimization.
blake3-neon = ["blake3/neon"]
blake3-rayon = ["blake3/rayon"]

[profile.release]
lto = true
