[package]
name = "rshash"
version = "0.3.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.56.0"
description = "A utility for computing various message digests"
readme = "README.md"
repository = "https://github.com/sorairolake/rshash"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
atty = "0.2.14"
blake2 = "0.9.2"
blake3 = "1.2.0"
dialoguer = { version = "0.9.0", default-features = false }
directories = "4.0.1"
exitcode = "1.1.2"
fsb = "0.0.2"
gost94 = { version = "0.9.1", optional = true }
groestl = "0.9.0"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
maplit = "1.0.2"
md-5 = { version = "0.9.1", optional = true }
md2 = { version = "0.9.0", optional = true }
md4 = { version = "0.9.0", optional = true }
once_cell = "1.8.0"
rayon = "1.5.1"
regex = "1.5.4"
ripemd160 = "0.9.1"
ripemd256 = "0.1.0"
ripemd320 = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
serde_with = { version = "1.11.0", features = ["hex"] }
sha-1 = { version = "0.9.8", optional = true }
sha2 = "0.9.8"
sha3 = "0.9.1"
shabal = "0.3.0"
sm3 = "0.3.0"
streebog = { version = "0.9.2", optional = true }
structopt = "0.3.25"
strum = { version = "0.22.0", features = ["derive"] }
tiger = "0.1.0"
toml = "0.5.8"
whirlpool = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
tempfile = "3.2.0"

[build-dependencies]
vergen = { version = "5.1.17", features = ["git"], default-features = false }

[features]
default = ["deprecated", "obsolete"]

deprecated = ["gost94", "streebog"] # Hash algorithms broken in theory
obsolete = ["md2", "md4", "md-5", "sha-1"] # Hash algorithms broken in practice

# For assembly implementation.
fsb-asm = ["fsb/asm"]
md5-asm = ["md-5/asm"]
sha1-asm = ["sha-1/asm"]
sha2-asm = ["sha2/asm"]
whirlpool-asm = ["whirlpool/asm"]
asm = ["fsb-asm", "md5-asm", "sha1-asm", "sha2-asm", "whirlpool-asm"]

# For BLAKE3 optimization.
blake3-neon = ["blake3/neon"]
blake3-rayon = ["blake3/rayon"]

[profile.release]
lto = true
